# taskmd

./: .gitignore  TODOs.md  pyproject.toml  setup.py
src/taskmd/: __init__.py  cli.py  config.py  datetime_utils.py  exceptions.py  id_utils.py  models.py  parser.py  paths.py  quick_capture.py  recurrence.py  repository.py  service.py  test_data.py  writer.py
src/taskmd/exporters/: __init__.py  csv_exporter.py  html_exporter.py  ics_exporter.py  image_exporter.py  json_exporter.py  pdf_exporter.py  report.py  source_exporter.py
src/taskmd/ui/: __init__.py  dashboard.py  heatmap.py  live.py  webpanel.py  webpanel_assets.py
src/taskmd_lite/: cli.py  service.py
taskmd_full_docs/: 00_INDEX.md  01_README_项目总览.md  02_产品定位与设计原则.md  03_架构总览与分层.md  04_仓库结构与模块职责.md  05_CLI_命令规范.md  06_配置与存储后端.md  07_Schema_设计.md  08_Sidecar_与_Action_Profiles.md  09_功能全景图.md  10_路线图_Roadmap.md  11_测试与质量保障.md  12_导出与集成设计.md  13_AI_与_可扩展性设计.md  14_贡献指南与发布流程.md  15_开源准备检查清单.md  16_架构图_Architecture_Diagrams.md
taskmd_full_docs/taskmd_docs_init_project/: 00_INDEX.md  01_项目介绍_Project_Introduction.md  02_项目结构_Project_Structure.md  03_项目功能_Features_Layered.md  04_路线图_Roadmap.md  05_Schema_设计_Schema_Design.md  06_项目骨架_Project_Skeleton.md
taskmd_full_docs/taskmd_repo_ready_docs_v2/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md
taskmd_full_docs/taskmd_repo_ready_docs_v2/docs/: architecture.md  cli.md  roadmap.md  schema.md
tests/: conftest.py  test_blackbox.py  test_cli.py  test_data.py  test_doctor.py  test_intro.py  test_lenient_parsing.py  test_parser.py  test_phase5_8.py  test_precise_time.py  test_quick_capture_guards.py  test_recurrence.py  test_roundtrip.py  test_sections.py  test_service.py  test_source_export.py  test_supplements.py  test_tags.py  test_webpanel.py  test_writer.py
