[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmd"
version = "0.5.0"
description = "Markdown-native, local-first, CLI-first task management system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "TaskMD Contributors"},
    {name = "CS72127"},
]
keywords = ["task", "markdown", "cli", "productivity", "todo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
ui = [
    "rich>=13.0",
    "watchdog>=3.0",
]
export = [
    "icalendar>=5.0",
    "fpdf2>=2.7",
    "cairosvg>=2.7",
    "Pillow>=10.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = [
    "taskmd[ui,export]",
]

[project.scripts]
tm = "taskmd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
